test/sema/typeck/function/params-wrong-type.out
error: Argument expects value of type `Int32` but got `Bool`.
--> params-wrong-type.dora:2:14
 | fn foo(a: Int32) {}
 | fn f() { foo(true); }
                ~~~~
 | 
1 error found.
