test/sema/typeck/function/params-wrong-type.dora
fn foo(a: Int32) {}
fn f() { foo(true); }
